#1897 - publisher assignee list

--- a/modules/features/dgu_data_set_request_publisher_assignee/css/publisher_assignee.css
+++ b/modules/features/dgu_data_set_request_publisher_assignee/css/publisher_assignee.css
@@ -6,7 +6,7 @@
 }
 
 #edit-field-publisher-assignee .form-type-radios {
-  position: absolute;
+  position: relative;
   background: #f0fcff;
   padding: 3px 6px;
   width: 100%;
