Display validation errors from etl_to_cvs.py

--- a/modules/features/dgu_organogram/css/organogram.css
+++ b/modules/features/dgu_organogram/css/organogram.css
@@ -836,6 +836,7 @@ a.categorydata:hover
     display: inline;
 }
 
+#edit-field-organogram-und .alert,
 #edit-field-organogram-und-table .information {
     text-align: left;
 }
