--- a/modules/features/dgu_organogram/css/organogram.css
+++ b/modules/features/dgu_organogram/css/organogram.css
@@ -109,17 +109,13 @@ div.infovis
     overflow:hidden;
     width:100%;
 }
-
-.infobox
+#infobox
 {
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px 10px 10px 10px;
     -moz-box-shadow: 0 5px 24px #888888;
     box-shadow: 0 5px 24px #888888;
     -webkit-box-shadow: 0 5px 24px #888888;
     background-color:#FFFFFF;
     border:1px solid #DDDDDD;
-    border-radius:10px 10px 10px 10px;
     color:#333333;
     display:none;
     height:auto;
@@ -128,11 +124,18 @@ div.infovis
     overflow-y:auto;
     padding:0 0 5px;
     position:absolute;
-    right:135px;
-    top:55px;
+    right:25px;
+    top: 25px;
+    width: 290px;
     z-index:999;
 }
-.infobox .ui-accordion .ui-accordion-content, .infobox div.panel div.content {
+body.IE8 div#infobox {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=8, Direction=225, Color='#777777')";
+}
+body.IE7 div#infobox {
+    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=8, Direction=225, Color='#777777');
+}
+#infobox .ui-accordion .ui-accordion-content, #infobox div.panel div.content {
     border-top:0 none;
     margin-bottom:2px;
     margin-top:-2px;
@@ -142,7 +145,7 @@ div.infovis
     top:1px;
 }
 
-.infobox .ui-accordion .ui-accordion-header
+#infobox .ui-accordion .ui-accordion-header
 {
     cursor:pointer;
     margin-top:3px !important;
@@ -151,28 +154,24 @@ div.infovis
 
 /* UI Overrides
  Infobox */
-.infobox .ui-accordion .ui-accordion-header {
-    background-color: #8bc658;
-}
-.infobox .ui-accordion .ui-accordion-header a
+#infobox .ui-accordion .ui-accordion-header a
 {
     font-size:0.8em !important;
     padding:0.3em 0.5em !important;
     text-align:right !important;
 }
 
-.infobox .ui-accordion-content
+#infobox .ui-accordion-content
 {
     overflow:auto;
     padding-bottom:0 !important;
     padding-top:0 !important;
 }
 
-.infobox h1
+#infobox h1
 {
     border-bottom:1px solid #CCCCCC;
     font-size:14px;
-    max-width: 200px;
     margin-bottom:0;
     margin-left:0;
     margin-top:0;
@@ -180,7 +179,7 @@ div.infovis
     text-align:center;
 }
 
-.infobox h2
+#infobox h2
 {
     color:#999999;
     font-size:0.9em;
@@ -189,50 +188,38 @@ div.infovis
     padding:0;
 }
 
-.infobox hr
+#infobox hr
 {
-    borderh:3px solid #fff;
+    border-color:#-moz-use-text-color #-moz-use-text-color #EEEEEE;
+    border-style:none none double;
+    border-width:medium medium 3px;
     padding-top:10px;
 }
 
-.infobox p a.expand
+#infobox p a.expand
 {
     color:#333333;
     font-weight:bold;
     text-decoration:none;
 }
-.infobox a.close {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px 5px 5px 5px;
-    background-color: #CCCCCC;
-    border-radius: 5px 5px 5px 5px;
-    color: #333333;
-    cursor: pointer;
-    font-size: 10px;
-    padding: 1px 5px 2px;
-    position: absolute;
-    right: 7px;
-    top: 7px;
-    margin: 0 !important;
-}
 
-.infobox p a.expand:hover
+#infobox p a.expand:hover
 {
     color:#3970AE;
     font-weight:bold;
 }
 
-.infobox p.comment
+#infobox p.comment
 {
     padding-bottom: 0;
 }
 
-.infobox p.comment span
+#infobox p.comment span
 {
     font-style:normal;
     margin-bottom: 0px;
 }
-.infobox p.comment span.text, .infobox p.notes span.text {
+#infobox p.comment span.text, #infobox p.notes span.text {
     background: none repeat scroll 0 0 transparent !important;
     border: medium none !important;
     color: #333333;
@@ -247,13 +234,13 @@ div.infovis
     padding: 3px 0;
     height:expression( this.scrollHeight > 74 ? "75px" : "auto" );
 }
-.infobox p.type
+#infobox p.type
 {
     text-transform:capitalize;
 }
-.infobox ul.members
+#infobox ul.members
 {
-    border-bottom:1px solid #fff;
+    border-bottom:1px solid #EEEEEE;
     display:none;
     font-family:georgia;
     list-style-type:none;
@@ -264,12 +251,12 @@ div.infovis
     text-align:left;
 }
 
-.infobox ul.members li
+#infobox ul.members li
 {
     padding-bottom:15px;
 }
 
-.infobox ul.members li span.memberType
+#infobox ul.members li span.memberType
 {
     color:#999999;
     display:block;
@@ -278,20 +265,20 @@ div.infovis
     padding-top:1px;
 }
 
-.infobox ul.members li span.name
+#infobox ul.members li span.name
 {
     display:block;
     font-weight:bold;
 }
 
-.infobox ul.members li span.salary
+#infobox ul.members li span.salary
 {
     float:right;
     margin-right:10px;
     margin-top:-20px;
 }
 
-.infobox ul.salaryMap
+#infobox ul.salaryMap
 {
     display:block;
     margin:0;
@@ -299,6 +286,8 @@ div.infovis
     position:absolute;
     visibility:hidden;
 }
+
+
 div.expander
 {
     clear:both;
