css for preview link

--- a/modules/features/dgu_organogram/css/organogram.css
+++ b/modules/features/dgu_organogram/css/organogram.css
@@ -59,6 +59,11 @@ tr.preview--show {
 .organogram-preview {
     position: relative;
 }
+
+.organogram-preview > span {
+    text-decoration: underline;
+}
+
 .organogram-preview-close {
     border:0;
     position: absolute;
